--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,4 +79,15 @@
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-none;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-slate-800 border-[6px] rounded-md;  
+  }
 }
